# openeo_mountains_snow

./: .gitignore  .nojekyll  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  snow_statistics.html  timeseries_reconstruction.html
.github/workflows/: build.yaml  publish_docs.yaml
docs/: _quarto.yml  index.md  snow_cover_fraction.qmd  snow_water_equivalent_reconstruction.qmd  timeseries_reconstruction.qmd
site_libs/bootstrap/: bootstrap-00fa91149070f33ed6a7deb687713812.min.css
src/openeo_mountains_snow/: .gitignore  collect_training.py  main.py  representative_pixels.py  senales_wgs84.geojson  snow_corsa_ml_inference.py  snow_cover_fraction.py  spatial_extent_utils.py
src/openeo_mountains_snow/conf/: config.yaml
src/openeo_mountains_snow/snowcoverarea_reconstruction/: README.md  andes.json  build_agera_stac.py  conditional_probability_udf.py  config.py  downscale_variables.py  downscaling_distribution.py  gap_fill_udf.py  gap_fill_udf_hr.py  gap_fill_udf_scf.py  highresolution_gapfilling.py  hist_rec_udf.py  historical_block.py  historical_block_debug.py  historical_reconstruction_udf.py  historical_reconstruction_udf_debug.py  hr_rec_udf.py  incidence_angle_udf.py  low_resolution_conditional_probability_udf.py  main.py  pipeline.py  reconstruction.py  run_agera_downscaler.py  s3_utils.py  sandbox.py  scf_processing.py  solar_position_udf.py  test_pipeline.ipynb  utils_gapfilling.py
src/snowflakes_openeo/: collect_training.py
test/snowflakes_openeo_tests/: conftest.py  test_meteo_downscaling.py  test_training_collection_udf.py
(+12 files in other folders)
